--- a/SDK_Laboratoire1/SDK_Laboratoire1.csproj
+++ b/SDK_Laboratoire1/SDK_Laboratoire1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibrairieConversionNote\LibrairieConversionNote.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="LibrairieConversionNote">
+      <HintPath>..\LibrairieConversionNote\bin\Debug\net6.0\LibrairieConversionNote.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
